--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h1>Space Unknown</h1>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
 
             <div class="menu-toggle">
