change html page to sematic rule

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <a href="/" class="btn-back">Beranda</a>
-    <div class="container">
+    <main>
         <h1>About</h1>
         <p>
             Halo selamat datang di web Space Unknown website ini merupakan sebuah project yang dikerjakan untuk memenuhi
@@ -22,7 +22,7 @@
             juga dapat mengkonversi satuan jarak tahun cahaya ke ukuran kilometer.
         </p>
         <p>- Muhammad Afif Fauzi</p>
-    </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
