--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,8 @@
 
 <body>
     <a href="/" class="btn-back">Beranda</a>
-    <div class="container">
+    <main>
         <h1>Contact</h1>
-
         <table>
             <tr>
                 <th>
@@ -32,7 +31,7 @@
                 <td><a href="https://github.com/afiffauz1">afiffauz1</a></td>
             </tr>
         </table>
-    </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
