--- a/index.html
+++ b/index.html
@@ -31,93 +31,93 @@
     </header>
     <div class="container">
         <main>
-            <div class="card">
+            <article class="card">
                 <img src="img/matahari.jpg" alt="Matahari">
-                <div class="detail">
+                <section class="detail">
                     <h2>Matahari</h2>
                     <a href="detail/matahari.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/mercury.jpg" alt="Merkurius">
-                <div class="detail">
+                <section class="detail">
                     <h2>Merkurius</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.000005571 Tahun Cahaya</p>
                     <a href="detail/merkurius.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/venus.jpg" alt="Venus">
-                <div class="detail">
+                <section class="detail">
                     <h2>Venus</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.0000114 Tahun Cahaya</p>
                     <a href="detail/venus.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/bumi.jpg" alt="Bumi">
-                <div class="detail">
+                <section class="detail">
                     <h2>Bumi</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.000015916 Tahun Cahaya</p>
                     <a href="detail/bumi.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/mars.jpg" alt="Mars">
-                <div class="detail">
+                <section class="detail">
                     <h2>Mars</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.000022969 Tahun Cahaya</p>
                     <a href="detail/mars.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/jupiter.jpg" alt="Jupiter">
-                <div class="detail">
+                <section class="detail">
                     <h2>Jupiter</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.000082028 Tahun Cahaya</p>
                     <a href="detail/jupiter.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/saturn.jpg" alt="Saturnus">
-                <div class="detail">
+                <section class="detail">
                     <h2>Saturnus</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.00015817 Tahun Cahaya</p>
                     <a href="detail/saturnus.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/neptune.jpg" alt="Neptunus">
-                <div class="detail">
+                <section class="detail">
                     <h2>Neptunus</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.0004732 Tahun Cahaya</p>
                     <a href="detail/neptunus.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-            <div class="card">
+                </section>
+            </article>
+            <article class="card">
                 <img src="img/uranus.jpg" alt="Uranus">
-                <div class="detail">
+                <section class="detail">
                     <h2>Uranus</h2>
                     <p><strong>Jarak ke Matahari:<br></strong>+- 0.00031315 Tahun Cahaya</p>
                     <a href="detail/uranus.html" class="btn">Lihat Detail</a>
-                </div>
-            </div>
-
+                </section>
+            </article>
         </main>
+
         <aside>
-            <div class="konverter">
+            <article class="konverter">
                 <h3>Ubah Tahun Cahaya Ke Kilometer</h3>
-                <div class="input">
+                <section class="input">
                     <input type="text" id="nilai-awal" placeholder="Masukkan angka">
                     <button id="konversi">Konversi</button>
-                </div>
-                <div class="display"></div>
-            </div>
-            <div class="about-me">
+                </section>
+                <section class="display"></section>
+            </article>
+            <article class="about-me">
                 <h3>About Me</h3>
-                <div class="profile">
+                <section class="profile">
                     <img src="/img/profil.jpg" alt="Muhammad Afif Fauzi">
-                </div>
+                </section>
                 <table>
                     <tr>
                         <th>Nama</th>
@@ -138,7 +138,7 @@
                 <p>
                     “ Dream bigger. Do bigger.”
                 </p>
-            </div>
+            </article>
         </aside>
         <footer></footer>
     </div>
