--- a/index.html
+++ b/index.html
@@ -140,8 +140,11 @@
                 </p>
             </article>
         </aside>
-        <footer></footer>
     </div>
+
+    <footer>
+        <p>Space Unknown &copy; 2020 Muhammad Afif Fauzi</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
