--- a/detail/jupiter.html
+++ b/detail/jupiter.html
@@ -1,26 +1,30 @@
-<div class="center">
-    <h1>Jupiter</h1>
-    <img src="../img/jupiter.jpg" alt="Jupiter">
-    <p>
-        Jupiter adalah planet terdekat kelima dari Matahari setelah Merkurius, Venus, Bumi, dan Mars. Planet ini
-        juga merupakan planet terbesar di Tata Surya. Jupiter merupakan raksasa gas dengan massa seperseribu
-        massa Matahari dan dua setengah kali jumlah massa semua planet lain di Tata Surya. Planet ini dan
-        raksasa gas lain di Tata Surya (yaitu Saturnus, Uranus, dan Neptunus) kadang-kadang disebut planet
-        Jovian atau planet luar. Jupiter telah dikenal oleh para astronom sejak zaman kuno, dan dikaitkan
-        dengan mitologi dan kepercayaan religius banyak peradaban. Bangsa Romawi menamai planet ini dari dewa
-        Jupiter dalam mitologi Romawi. Saat diamati dari Bumi, magnitudo tampak Jupiter dapat mencapai
-        −2,94, yang cukup terang untuk menghasilkan bayangan, dan juga menjadikannya objek tercerah ketiga
-        di langit malam setelah Bulan dan Venus, walaupun Mars dapat menyaingi kecerahan Jupiter pada saat
-        tertentu.
+<div class="card">
+    <div class="card-image">
+        <img src="../img/jupiter.jpg" alt="Jupiter">
+        <span class="card-title">Jupiter</span>
+    </div>
+    <div class="card-content">
+        <p>
+            Jupiter adalah planet terdekat kelima dari Matahari setelah Merkurius, Venus, Bumi, dan Mars. Planet ini
+            juga merupakan planet terbesar di Tata Surya. Jupiter merupakan raksasa gas dengan massa seperseribu
+            massa Matahari dan dua setengah kali jumlah massa semua planet lain di Tata Surya. Planet ini dan
+            raksasa gas lain di Tata Surya (yaitu Saturnus, Uranus, dan Neptunus) kadang-kadang disebut planet
+            Jovian atau planet luar. Jupiter telah dikenal oleh para astronom sejak zaman kuno, dan dikaitkan
+            dengan mitologi dan kepercayaan religius banyak peradaban. Bangsa Romawi menamai planet ini dari dewa
+            Jupiter dalam mitologi Romawi. Saat diamati dari Bumi, magnitudo tampak Jupiter dapat mencapai
+            −2,94, yang cukup terang untuk menghasilkan bayangan, dan juga menjadikannya objek tercerah ketiga
+            di langit malam setelah Bulan dan Venus, walaupun Mars dapat menyaingi kecerahan Jupiter pada saat
+            tertentu.
 
-        Jupiter sebagian besar terdiri dari hidrogen dan helium. Seperempat massa Jupiter merupakan helium,
-        walaupun jumlahnya hanya sepersepuluh komposisi Jupiter. Planet ini mungkin memiliki inti berbatu yang
-        terdiri dari unsur-unsur berat, namun tidak memiliki permukaan yang padat layaknya raksasa gas
-        lainnya. Akibat rotasinya yang cepat, planet ini berbentuk bulat pepat (terdapat tonjolan di sekitar
-        khatulistiwa Jupiter). Atmosfer luar terbagi menjadi beberapa lapisan di lintang yang berbeda, dan
-        interaksi antara batas-batas lapisan tersebut menghasilkan badai. Salah satu dampaknya adalah Bintik
-        Merah Raksasa, yaitu badai besar yang telah diketahui keberadaannya semenjak abad ke-17 dengan
-        menggunakan teleskop.
-        <strong>(wikipedia.com)</strong>
-    </p>
+            Jupiter sebagian besar terdiri dari hidrogen dan helium. Seperempat massa Jupiter merupakan helium,
+            walaupun jumlahnya hanya sepersepuluh komposisi Jupiter. Planet ini mungkin memiliki inti berbatu yang
+            terdiri dari unsur-unsur berat, namun tidak memiliki permukaan yang padat layaknya raksasa gas
+            lainnya. Akibat rotasinya yang cepat, planet ini berbentuk bulat pepat (terdapat tonjolan di sekitar
+            khatulistiwa Jupiter). Atmosfer luar terbagi menjadi beberapa lapisan di lintang yang berbeda, dan
+            interaksi antara batas-batas lapisan tersebut menghasilkan badai. Salah satu dampaknya adalah Bintik
+            Merah Raksasa, yaitu badai besar yang telah diketahui keberadaannya semenjak abad ke-17 dengan
+            menggunakan teleskop.
+            <strong>(wikipedia.com)</strong>
+        </p>
+    </div>
 </div>
