--- a/detail/mars.html
+++ b/detail/mars.html
@@ -1,20 +1,24 @@
-<div class="center">
-    <h1>Mars</h1>
-    <img src="../img/mars.jpg" alt="Mars">
-    <p>
-        Mars adalah planet terdekat keempat dari Matahari. Namanya diambil dari dewa perang Romawi, Mars. Planet
-        ini sering dijuluki sebagai "planet merah" karena tampak dari jauh berwarna kemerah-kemerahan. Ini
-        disebabkan oleh keberadaan besi(III) oksida di permukaan planet Mars.[6] Mars adalah planet bebatuan
-        dengan atmosfer yang tipis. Di permukaan Mars terdapat kawah, gunung berapi, lembah, gurun, dan tudung
-        es. Periode rotasi dan siklus musim Mars mirip dengan Bumi. Di Mars berdiri Olympus Mons, gunung
-        tertinggi di Tata Surya, dan Valles Marineris, lembah terbesar di Tata Surya. Selain itu, di belahan
-        utara terdapat cekungan Borealis yang meliputi 40% permukaan Mars.[7][8]
+<div class="card">
+    <div class="card-image">
+        <img src="../img/mars.jpg" alt="Mars">
+        <span class="card-title">Mars</span>
+    </div>
+    <div class="card-content">
+        <p>
+            Mars adalah planet terdekat keempat dari Matahari. Namanya diambil dari dewa perang Romawi, Mars. Planet
+            ini sering dijuluki sebagai "planet merah" karena tampak dari jauh berwarna kemerah-kemerahan. Ini
+            disebabkan oleh keberadaan besi(III) oksida di permukaan planet Mars.[6] Mars adalah planet bebatuan
+            dengan atmosfer yang tipis. Di permukaan Mars terdapat kawah, gunung berapi, lembah, gurun, dan tudung
+            es. Periode rotasi dan siklus musim Mars mirip dengan Bumi. Di Mars berdiri Olympus Mons, gunung
+            tertinggi di Tata Surya, dan Valles Marineris, lembah terbesar di Tata Surya. Selain itu, di belahan
+            utara terdapat cekungan Borealis yang meliputi 40% permukaan Mars.[7][8]
 
-        Lingkungan Mars lebih bersahabat bagi kehidupan dibandingkan keadaan Planet Venus. Namun begitu,
-        keadaannya tidak cukup ideal untuk manusia. Suhu udara yang cukup rendah dan tekanan udara yang rendah,
-        ditambah dengan komposisi udara yang sebagian besar karbondioksida, menyebabkan manusia harus
-        menggunakan alat bantu pernapasan jika ingin tinggal di sana. Misi-misi ke planet merah ini, sampai
-        penghujung abad ke-20, belum menemukan jejak kehidupan di sana, meskipun yang amat sederhana.
-        <strong>(wikipedia.com)</strong>
-    </p>
+            Lingkungan Mars lebih bersahabat bagi kehidupan dibandingkan keadaan Planet Venus. Namun begitu,
+            keadaannya tidak cukup ideal untuk manusia. Suhu udara yang cukup rendah dan tekanan udara yang rendah,
+            ditambah dengan komposisi udara yang sebagian besar karbondioksida, menyebabkan manusia harus
+            menggunakan alat bantu pernapasan jika ingin tinggal di sana. Misi-misi ke planet merah ini, sampai
+            penghujung abad ke-20, belum menemukan jejak kehidupan di sana, meskipun yang amat sederhana.
+            <strong>(wikipedia.com)</strong>
+        </p>
+    </div>
 </div>
