--- a/detail/neptunus.html
+++ b/detail/neptunus.html
@@ -1,38 +1,42 @@
-<div class="center">
-    <h1>Neptunus</h1>
-    <img src="../img/neptune.jpg" alt="Neptunus">
-    <p>
-        Neptunus merupakan planet terjauh (kedelapan) jika ditinjau dari Matahari. Planet ini dinamai dari dewa
-        lautan Romawi.
-        Neptunus merupakan planet terbesar keempat berdasarkan diameter (49.530 km) dan terbesar ketiga
-        berdasarkan massa. Massa
-        Neptunus tercatat 17 kali lebih besar daripada Bumi, dan sedikit lebih besar daripada Uranus. Neptunus
-        mengorbit
-        Matahari pada jarak 30,1 sa atau sekitar 4.450 juta km. Periode rotasi planet ini adalah 16,1 jam,
-        sedangkan periode
-        revolusinya adalah 164,8 tahun. Simbol astronomisnya adalah ♆, yang merupakan trisula dewa Neptunus.
+<div class="card">
+    <div class="card-image">
+        <img src="../img/neptune.jpg" alt="Neptunus">
+        <span class="card-title">Neptunus</span>
+    </div>
+    <div class="card-content">
+        <p>
+            Neptunus merupakan planet terjauh (kedelapan) jika ditinjau dari Matahari. Planet ini dinamai dari dewa
+            lautan Romawi.
+            Neptunus merupakan planet terbesar keempat berdasarkan diameter (49.530 km) dan terbesar ketiga
+            berdasarkan massa. Massa
+            Neptunus tercatat 17 kali lebih besar daripada Bumi, dan sedikit lebih besar daripada Uranus. Neptunus
+            mengorbit
+            Matahari pada jarak 30,1 sa atau sekitar 4.450 juta km. Periode rotasi planet ini adalah 16,1 jam,
+            sedangkan periode
+            revolusinya adalah 164,8 tahun. Simbol astronomisnya adalah ♆, yang merupakan trisula dewa Neptunus.
 
-        Neptunus ditemukan pada tanggal 23 September 1846. Planet ini merupakan planet pertama yang ditemukan
-        melalui prediksi
-        matematika. Perubahan yang tak terduga di orbit Uranus membuat Alexis Bouvard menyimpulkan bahwa hal
-        tersebut
-        diakibatkan oleh gangguan gravitasi dari planet yang tak dikenal. Neptunus selanjutnya diamati oleh
-        Johann Galle dalam
-        posisi yang diprediksikan oleh Urbain Le Verrier. Satelit alam terbesarnya, Triton, ditemukan segera
-        sesudahnya,
-        sementara 12 satelit alam lainnya baru ditemukan lewat teleskop pada abad ke-20. Neptunus telah
-        dikunjungi oleh satu
-        wahana angkasa, yaitu Voyager 2, yang terbang melewati planet tersebut pada tanggal 25 Agustus 1989.
+            Neptunus ditemukan pada tanggal 23 September 1846. Planet ini merupakan planet pertama yang ditemukan
+            melalui prediksi
+            matematika. Perubahan yang tak terduga di orbit Uranus membuat Alexis Bouvard menyimpulkan bahwa hal
+            tersebut
+            diakibatkan oleh gangguan gravitasi dari planet yang tak dikenal. Neptunus selanjutnya diamati oleh
+            Johann Galle dalam
+            posisi yang diprediksikan oleh Urbain Le Verrier. Satelit alam terbesarnya, Triton, ditemukan segera
+            sesudahnya,
+            sementara 12 satelit alam lainnya baru ditemukan lewat teleskop pada abad ke-20. Neptunus telah
+            dikunjungi oleh satu
+            wahana angkasa, yaitu Voyager 2, yang terbang melewati planet tersebut pada tanggal 25 Agustus 1989.
 
-        Komposisi penyusun planet ini mirip dengan Uranus, dan komposisi keduanya berbeda dari raksasa gas
-        Jupiter dan Saturnus.
-        Atmosfer Neptunus mengandung hidrogen, helium, hidrokarbon, kemungkinan nitrogen, dan kandungan "es"
-        yang besar seperti
-        es air, amonia, dan metana. Astronom kadang-kadang mengategorikan Uranus dan Neptunus sebagai "raksasa
-        es" untuk
-        menekankan perbedaannya.Seperti Uranus, interior Neptunus terdiri dari es dan batu. Metana di wilayah
-        terluar planet
-        merupakan salah satu penyebab kenampakan kebiruan Neptunus.
-        <strong>(wikipedia.com)</strong>
-    </p>
+            Komposisi penyusun planet ini mirip dengan Uranus, dan komposisi keduanya berbeda dari raksasa gas
+            Jupiter dan Saturnus.
+            Atmosfer Neptunus mengandung hidrogen, helium, hidrokarbon, kemungkinan nitrogen, dan kandungan "es"
+            yang besar seperti
+            es air, amonia, dan metana. Astronom kadang-kadang mengategorikan Uranus dan Neptunus sebagai "raksasa
+            es" untuk
+            menekankan perbedaannya.Seperti Uranus, interior Neptunus terdiri dari es dan batu. Metana di wilayah
+            terluar planet
+            merupakan salah satu penyebab kenampakan kebiruan Neptunus.
+            <strong>(wikipedia.com)</strong>
+        </p>
+    </div>
 </div>
