--- a/detail/saturnus.html
+++ b/detail/saturnus.html
@@ -1,23 +1,27 @@
-<div class="center">
-    <h1>Saturnus</h1>
-    <img src="../img/saturn.jpg" alt="Saturnus">
-    <p>
-        Saturnus adalah sebuah planet di tata surya yang dikenal juga sebagai planet bercincin, dan merupakan
-        planet terbesar kedua di tata surya setelah Jupiter. Jarak Saturnus sangat jauh dari Matahari, karena
-        itulah Saturnus tampak tidak terlalu jelas dari Bumi. Saturnus berevolusi dalam waktu 29,46 tahun.
-        Setiap 378 hari, Bumi, Saturnus dan Matahari akan berada dalam satu garis lurus. Selain berevolusi,
-        Saturnus juga berotasi dalam waktu yang sangat singkat, yaitu 10 jam 40 menit 24 detik.
+<div class="card">
+    <div class="card-image">
+        <img src="../img/saturn.jpg" alt="Saturnus">
+        <span class="card-title">Saturnus</span>
+    </div>
+    <div class="card-content">
+        <p>
+            Saturnus adalah sebuah planet di tata surya yang dikenal juga sebagai planet bercincin, dan merupakan
+            planet terbesar kedua di tata surya setelah Jupiter. Jarak Saturnus sangat jauh dari Matahari, karena
+            itulah Saturnus tampak tidak terlalu jelas dari Bumi. Saturnus berevolusi dalam waktu 29,46 tahun.
+            Setiap 378 hari, Bumi, Saturnus dan Matahari akan berada dalam satu garis lurus. Selain berevolusi,
+            Saturnus juga berotasi dalam waktu yang sangat singkat, yaitu 10 jam 40 menit 24 detik.
 
-        Saturnus memiliki kerapatan yang rendah karena sebagian besar zat penyusunnya berupa gas dan cairan.
-        Inti Saturnus diperkirakan terdiri dari batuan padat dengan atmosfer tersusun atas gas amonia dan
-        metana, hal ini tidak memungkinkan adanya kehidupan di Saturnus.
+            Saturnus memiliki kerapatan yang rendah karena sebagian besar zat penyusunnya berupa gas dan cairan.
+            Inti Saturnus diperkirakan terdiri dari batuan padat dengan atmosfer tersusun atas gas amonia dan
+            metana, hal ini tidak memungkinkan adanya kehidupan di Saturnus.
 
-        Cincin Saturnus sangat unik, terdiri beribu-ribu cincin yang mengelilingi planet ini. Bahan pembentuk
-        cincin ini masih belum diketahui. Para ilmuwan berpendapat, cincin itu tidak mungkin terbuat dari
-        lempengan padat karena akan hancur oleh gaya sentrifugal. Namun, tidak mungkin juga terbuat dari zat
-        cair karena gaya sentrifugal akan mengakibatkan timbulnya gelombang. Jadi, sejauh ini, diperkirakan yang
-        paling mungkin membentuk cincin-cincin itu adalah bongkahan-bongkahan es meteorit. Cincin ini terentang
-        dari 6.630 km - 120.700 km di atas atmosfer Saturnus.
-        <strong>(wikipedia.com)</strong>
-    </p>
+            Cincin Saturnus sangat unik, terdiri beribu-ribu cincin yang mengelilingi planet ini. Bahan pembentuk
+            cincin ini masih belum diketahui. Para ilmuwan berpendapat, cincin itu tidak mungkin terbuat dari
+            lempengan padat karena akan hancur oleh gaya sentrifugal. Namun, tidak mungkin juga terbuat dari zat
+            cair karena gaya sentrifugal akan mengakibatkan timbulnya gelombang. Jadi, sejauh ini, diperkirakan yang
+            paling mungkin membentuk cincin-cincin itu adalah bongkahan-bongkahan es meteorit. Cincin ini terentang
+            dari 6.630 km - 120.700 km di atas atmosfer Saturnus.
+            <strong>(wikipedia.com)</strong>
+        </p>
+    </div>
 </div>
